results/SpecGenBench/2-shot/log-StrPalindrome-2023_11_06_14_38_17.txt
public class StrPalindrome {
   
   //@ requires str != null;
   //@ ensures \result == true || \result == false;
   public boolean isPalindrome(String str) {
      String reverse = "";
      
      int length = str.length();

      //@ maintaining 0 <= i && i <= length;
      //@ maintaining reverse.equals(reverse(0, i-1, str));
      //@ decreases i;
      for (int i = length - 1; 0 <= i; i--) {
         reverse = reverse + str.charAt(i);
      }
      
      return reverse.equals(str);
   }

}
/home/max/Documents/JMLGPT/tmp/StrPalindrome.java:11: error: cannot find symbol
      //@ maintaining reverse.equals(reverse(0, i-1, str));
                                     ^
  symbol:   method reverse(int,int,String)
  location: class StrPalindrome
1 error

